# medical-agents_Fr

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  compose.yaml  entrypoint.sh  init_template.py  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
agents/jarvis/: agent.py
agents/jarvis/sub_agents/: researcher.py
agents/jarvis/tools/: calculator.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/feature_parity_audit_20260124/: audit_file_structure.txt  audit_report.md  index.md  metadata.json  plan.md  spec.md
docs/: DEPLOYMENT.md  README.md  architecture.md  development.md
docs/base-infra/: docker-compose-workflow.md  dockerfile-strategy.md  environment-variables.md  observability.md
jarvis/: agent.py  server.py
platform_utils/: __init__.py  db_url.py  env.py
src/agent/: agent.py  model.py  prompt.py  tools.py
src/agent/sub_agents/: icd10.py  image_analysis.py  soap.py
src/agent_foundation/: agent.py  server.py
src/agent_foundation/utils/: config.py  observability.py
systemd/: agent.service
tests/: test_callbacks.py  test_config.py  test_db_url.py  test_integration.py  test_model.py  test_prompt.py
