[project]
name = "google-adk-wo-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.21.0",
    "litellm>=1.80.5",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
warn_unused_configs = true

# Keep mypy focused on our code; dependencies may not ship type information.
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "dotenv.*",
    "uvicorn.*",
    "fastapi.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

